--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,9 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+/* Home : Start */
+.HomeScreen {
+  background-color: #F00;
+} 
+/* Home : End */ 
