--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
   height: 150px;
   padding: 20px;
   color: white;
+  margin-top: 54px;
 }
 
 .App-intro {
@@ -25,6 +26,6 @@
 
 /* Home : Start */
 .HomeScreen {
-  background-color: #F00;
+  background-color: #CCC;
 } 
 /* Home : End */ 
